# USECASE__EnergyPriceForecaster

./: .env.example  .gitignore  Makefile  README.md  config.yaml  product-description.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml  train.yml
configs/: config.py
notebooks/: 01_eda_load_forecast.ipynb  evaluation.py
src/gridprice/: __init__.py  backtest.py  baseline.py  features.py  ingestion.py  models.py  pipeline.py  synthetic_data.py
tests/: test_features.py  test_models.py
