[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridprice"
version = "0.1.0"
description = "Day-ahead electricity price forecaster"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "entsoe-py>=0.8",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]
